--- a/src/index.css
+++ b/src/index.css
@@ -92,6 +92,7 @@ border-right: 1px solid #ccc;
   .task-container {
     max-width: 40rem;
     margin: 1rem auto;
+     
   }
 }
 
@@ -107,7 +108,7 @@ border-right: 1px solid #ccc;
 
 .task-container-text {
 font-size: 20px;
-margin-left: 10px;
+ /* display: flex; */
  
 }
 
@@ -125,4 +126,25 @@ align-items: flex-end;
 
   cursor: pointer;
    
+}
+
+ .radioButtonGroup {
+  /* display: flex;
+  flex-direction: column;
+  align-items: center
+   */
+ /* display: flex;
+ flex-direction: column;
+ align-items: center; */
+  /* margin-top: 55px; */
+}
+  
+.select {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 5px;
+  margin-bottom: 10px;
+  font-size: 15px;
+  padding: 5px;
 }
